--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 }
 ::-webkit-scrollbar-thumb {
     background: var(--elBlue); 
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 ::-webkit-scrollbar-thumb:hover {
     background: var(--lBlue);
@@ -89,6 +89,11 @@ body {
     transform: translate(0, -2px);
     /* color: black; */
 }
+@keyframes scrollWide {
+    0% { max-width: 0px; }
+    100% { max-width: 700px; }
+}
+
 .navbar {
     max-width: 700px;
     height: 40px;
@@ -97,7 +102,10 @@ body {
     margin-left: auto;
     margin-right: auto;
     border: 5px solid var(--elGrey);
-    overflow: hidden;
+    /* overflow: hidden; */
+    z-index: 1;
+    /* animation-name: fadeIn; */
+    animation-duration: 1s;
 }
 .nbItem {
     width: calc((700px / 4) - 8px);
@@ -117,11 +125,15 @@ body {
     cursor: pointer;
     overflow: hidden;
 }
+.grown {
+    font-size: 30px;
+}
 .nbItem:hover {
     background-color: rgba(255,255,255,0.5);
 }
 .selected, .selected:hover {
     background-color: var(--elBlue);
+    transform: translate(0px, -10px);
 }
 .nbSecondary {
     text-decoration: underline var(--elBlue);
@@ -132,6 +144,12 @@ body {
     padding: 10px;
     margin-bottom: 50px;
 }
+
+@keyframes fadeIn {
+    0% { opacity: 0; transform: translate(0px, -20px); }
+    100% { opacity: 1; transform: translate(0px, 0px); }
+}
+
 .link {
     max-width: 400px;
     width: calc(100vw - 40px);
@@ -147,52 +165,119 @@ body {
     overflow: hidden;
     color: black;
     cursor: pointer;
+    animation: fadeIn 1s;
+    animation-fill-mode:backwards;
 }
-.link img {
+.link img, .alink img {
     position: absolute;
+    filter: opacity(0.5) brightness(1.1);
     top: 50%;
     transform: translateY(-50%);
+
     width: calc(100vw - 40px);
     max-width: 400px;
-    filter: opacity(0.5) brightness(1.1);
 }
-.link img.top {
+.link img.top, .alink img.top {
     top: 0;
     transform: translateY(0);
 }
-.link .topText {
+.link .topText, .alink .topText {
     position: absolute;
 }
-.link h1 {
+.link h1, .alink h1 {
     padding-left: 25px;
     font-size: 17px;
     margin-top: 20px;
     margin-bottom: 0;
     transition-duration: 300ms;
 }
-.link p {
+.link p:not(.linkButton), .alink p:not(.linkButton) {
     font-size: 14px;
     margin-top: 0;
     padding-left: 25px;
     font-weight: 500;
     transition-duration: 300ms;
 }
-.link .date {
+.link .date, .alink .date {
     position: absolute;
     bottom: 0;
     text-align: right;
     padding-right: 25px;
 }
-.link:hover {
-    box-shadow: black 6px 6px 6px;
+.link.invis {
+    transition-duration: 0s;
+    pointer-events: none;
+    opacity: 0;
+}
+.link:hover:not(.active) {
+    box-shadow: var(--lBlue) 6px 6px 0px;
     transform: translate(-3px, -3px);
 }
-.link:hover h1 {
-    text-shadow: var(--lBlue) 2px 2px 0px;
+
+.alink {
+    max-width: 400px;
+    width: calc(100vw - 40px);
+    height: 150px;
+    background-color: white;
+    margin: 10px;
+    border-radius: 30px;
+    text-align: left;
+    position: fixed;
+    overflow: hidden;
+    color: black;
+    cursor:auto;
+    transition-duration: 300ms;
+    box-shadow: black 0px 0px 20px;
 }
-.link:hover p {
-    text-shadow: var(--lBlue) 1px 1px 0px;
+.alink:not(.shrinking) img {
+    height: 460px;
+    position: absolute;
+    object-fit: cover;
 }
+.alink:not(.shrinking) .topText {
+    position: absolute;
+}
+.alink:not(.shrinking) h1 {
+    font-size: 25px;
+}
+.alink:not(.shrinking) p {
+    font-size: 17px;
+    font-weight: 500;
+}
+.alink:not(.shrinking) .date {
+    padding-right: 28px;
+}
+.linkButton {
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 0px;
+    border-radius: 20px;
+    background-color: var(--lBlue);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 20px;
+    text-align: center;
+    color: white;
+    transition-duration: 300ms;
+}
+.linkButton:hover {
+    background-color: var(--elBlue);
+    transform: translate(0px, -10px);
+    /* box-shadow: black 0px 0px 20px; */
+}
+@keyframes fadeAcross {
+    0% { opacity: 0; transform: translate(20px, 0px); }
+    100% { opacity: 1; transform: translate(0px, 0px); }
+}
+
+.changeItem {
+    /* animation-name: fadeAcross; */
+    animation-duration: 1s;
+    animation-fill-mode: backwards;
+}
+
 .article {
     width: calc(95vw - 50px);
     max-width: 650px;
@@ -228,7 +313,7 @@ body {
     text-align: left;
 }
 .article p {
-    margin-top: 0;
+    margin-top: 0px;
     font-size: 13px;
     padding-left: 10px;
     padding-right: 10px;
@@ -356,6 +441,7 @@ body {
 .article img.banner {
     width: calc(95vw - 50px - 20px);
     max-width: calc(650px - 20px);
+    margin-bottom: 30px;
 }
 .article h6 {
     text-align: center;
@@ -381,6 +467,9 @@ body {
     overflow: hidden;
     cursor: pointer;
     transition-duration: 300ms;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-fill-mode: backwards;
 }
 .ills img:hover {
     filter: brightness(1.5);
@@ -405,4 +494,18 @@ body {
 .stopScrolling {
     height: 100%;
     overflow: hidden;
+}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+}
+canvas {
+    position: fixed;
+    z-index: 1000;
+    pointer-events: none;
+    top: 0;
+    left: 0;
 }
