--- a/stylesheet.css
+++ b/stylesheet.css
@@ -341,7 +341,7 @@ body {
     color: black;
     word-wrap: break-word;
 }
-.article .goHome, .ills .goHome {
+.goHome {
     font-size: 13px;
     color: var(--lBlue);
     transition-duration: 300ms;
@@ -349,11 +349,11 @@ body {
     padding-right: 10px;
     width: fit-content;
 }
-.article .goHome:hover, .ills .goHome:hover {
+.goHome:hover {
     font-weight: 900;
     padding-left: 20px;
 }
-.article a, .ills a {
+.article a, .ills a, .docsBody a {
     color: var(--lBlue);
 }
 .article h4 {
@@ -508,4 +508,51 @@ canvas {
     pointer-events: none;
     top: 0;
     left: 0;
+}
+.docsBody {
+    /* background-color: green; */
+    width: 95vw;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.docsHead {
+    /* background-color: red; */
+    width: 100%;
+}
+.docsHead img {
+    width: 50px;
+    display: inline-block;
+    vertical-align: middle;
+}
+.docsHead h1 {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+}
+.docsHead p {
+    margin-top: 0;
+}
+.docsList {
+    /* background-color: blue; */
+    text-align: center;
+}
+.docsList div {
+    width: 100px;
+    height: 100px;
+    background-color: whitesmoke;
+    border: rgb(141, 141, 141) 3px solid;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 8px;
+}
+.docsList div p {
+    margin-top: 8px;
+    font-size: 13px;
+    color: black;
+    text-decoration: underline black;
+}
+.docsList div i {
+    font-size: 40px;
+    margin-top: 10px;
 }
