--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,10 @@ body {
     background-attachment: fixed;
     text-align: center;
     font-family: 'Quicksand', sans-serif;
-    transition-duration: 3000ms;
+    min-height: calc(100vh - 50px);
+
+    display: flex;
+    flex-direction: column;
 }
 p { color: var(--text);}
 .icon {
@@ -55,38 +58,45 @@ p { color: var(--text);}
     margin-right: auto;
     color: var(--text);
 }
+.wholeDocument {
+    flex: 1;
+}
 .footer {
     background-color: var(--lBlue);
     width: 100%;
-    /* height: 70px; */
-    float: bottom;
-    /* position: fixed; */
-    /* bottom: 0; */
-    padding-bottom: 10px;
-    /* padding-top: 10px; */
+    height: fit-content;
+    bottom: 0;
+    position: relative;
+
     transition-duration: 300ms;
 }
-.footer.snap {
-    position: fixed;
-    bottom: 0;
+.footer .bunch {
+    height: fit-content;
+    border-bottom: 1px solid rgba(255, 255, 255,0.5);
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 .footer a {
     color: white;
     display: inline-block;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 10px;
     text-decoration: underline;
     transition-duration: 300ms;
     cursor: pointer;
+    padding: 8px;
+    font-size: 13px;
 }
 .footer p {
     color: white;
     display: inline-block;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 10px;
     margin-bottom: 0;
+    margin-top: 0;
+    padding: 8px;
+    font-size: 13px;
 }
 .footer a:hover {
     font-weight: 900;
@@ -96,6 +106,72 @@ p { color: var(--text);}
 @keyframes scrollWide {
     0% { max-width: 0px; }
     100% { max-width: 700px; }
+}
+.darkToggle {
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    margin-left: auto;
+    height: 100%;
+}
+.darkToggle p {
+    font-size: 12px;
+    color: var(--acBlue);
+    margin: 5px;
+    margin-top: 12px;
+    padding: 0;
+    display: block;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--acBlue);
+    transition: .4s;
+    border-radius: 34px;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
+    background-color: var(--lBlue);
+    transition: .4s;
+    border-radius: 50%;
+}
+input:checked + .slider:before {
+    transform: translateX(20px);
+}
+@media screen and (max-width: 700px) {
+    .darkToggle {
+        right: unset;
+        bottom: unset;
+        position: relative;
+        margin-left: unset;
+        height: unset;
+        padding: 8px;
+    }
+    .darkToggle p, .darkToggle label{
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: 0;
+    }
 }
 
 .navbar {
@@ -150,7 +226,7 @@ p { color: var(--text);}
 .linkBox {
     margin-top: 30px;
     padding: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 @keyframes fadeIn {
@@ -743,51 +819,5 @@ canvas {
     color: var(--text);
     font-size: 40px;
     margin-top: 10px;
-}
-.darkToggle {
-    float: right;
-    vertical-align: top;
-}
-.darkToggle p {
-    font-size: 12px;
-    color: var(--acBlue);
-    margin: 5px;
-    margin-top: 15px;
-}
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 20px;
-}
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--acBlue);
-    transition: .4s;
-    border-radius: 34px;
-}
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 2px;
-    bottom: 2px;
-    background-color: var(--lBlue);
-    transition: .4s;
-    border-radius: 50%;
-}
-input:checked + .slider:before {
-    transform: translateX(20px);
 }
 br { user-select: none; }
