--- a/stylesheet.css
+++ b/stylesheet.css
@@ -438,7 +438,8 @@ input:checked + .slider:before {
 }
 .goHome:hover {
     font-weight: 900;
-    padding-left: 20px;
+    transform: translateX(10px);
+    /* padding-left: 20px; */
 }
 
 .illWindow {
